perf(Db): add db related initializations

--- a/dotnet-improvement/appsettings.json
+++ b/dotnet-improvement/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=ProductDb;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
