perf(appsetting): update connection string with accurate value in appsettings.json

--- a/dotnet-improvement/appsettings.json
+++ b/dotnet-improvement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=ProductDb;Integrated Security=True"
+    "DefaultConnection": "Server=127.0.0.1,11433;Initial Catalog=ProductDb;User ID=SA;Password=1234567Aa@;Integrated Security=False;"
   },
   "Logging": {
     "LogLevel": {
