--- a/dotnet-improvement/dotnet-improvement.csproj
+++ b/dotnet-improvement/dotnet-improvement.csproj
@@ -1,9 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>dotnet_improvement</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Configs\Delegates\**" />
+    <Content Remove="Configs\Delegates\**" />
+    <EmbeddedResource Remove="Configs\Delegates\**" />
+    <None Remove="Configs\Delegates\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
