--- a/dotnet-improvement/dotnet-improvement.Presentation.csproj
+++ b/dotnet-improvement/dotnet-improvement.Presentation.csproj
@@ -13,17 +13,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\dotnet-improvement.Core\dotnet-improvement.Core.csproj" />
+    <ProjectReference Include="..\dotnet-improvement.Infrastructure\dotnet-improvement.Infrastructure.csproj" />
+    <ProjectReference Include="..\dotnet-improvement.Utility\dotnet-improvement.Utility.csproj" />
   </ItemGroup>
 
 </Project>
