--- a/dotnet-improvement.Core/dotnet-improvement.Core.csproj
+++ b/dotnet-improvement.Core/dotnet-improvement.Core.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>dotnet_improvement.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
